SimCParser/antlr/SimcParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/Data/Code/SimulationCraftParser/AntlrCSharp/SimcParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SimcParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ACTIONS=1, ASSIGN=2, VARIABLE=3, VARIABLEASSIGN=4, VARDEFAULT=5, VARVALUE=6, 
		VARVALELSE=7, VARCONDITION=8, VAROP=9, ACTIF=10, ACTCALL=11, TARGETIF=12, 
		MIN=13, MAX=14, EXTERN=15, TARGETCYCLE=16, ACTINTERRUPT=17, INTERRUPTIF=18, 
		USEITEM=19, PRECOMBATTIME=20, USEOFFGCD=21, SLOT=22, COMMENT=23, NEWLINE=24, 
		BITWISE_OR=25, OPEN_PARENS=26, CLOSE_PARENS=27, COMMA=28, PLUS=29, MINUS=30, 
		STAR=31, DIV=32, PERCENT=33, AMP=34, LT=35, GT=36, DOT=37, OP_EQ=38, OP_NOT=39, 
		OP_LE=40, OP_GE=41, HASH=42, IDENTIFIER=43, DECIMAL_NUMERAL=44, NUMERAL=45;
	public const int
		RULE_profile = 0, RULE_commentLine = 1, RULE_callAction = 2, RULE_externAction = 3, 
		RULE_useItemAction = 4, RULE_variableAction = 5, RULE_conditionalAction = 6, 
		RULE_actionpart = 7, RULE_target_cycle = 8, RULE_target_if = 9, RULE_dotted_name = 10, 
		RULE_simpleAction = 11, RULE_eval = 12, RULE_exp = 13, RULE_qualifier = 14, 
		RULE_precombat_time = 15, RULE_if_condition = 16, RULE_use_off_gcd_condition = 17;
	public static readonly string[] ruleNames = {
		"profile", "commentLine", "callAction", "externAction", "useItemAction", 
		"variableAction", "conditionalAction", "actionpart", "target_cycle", "target_if", 
		"dotted_name", "simpleAction", "eval", "exp", "qualifier", "precombat_time", 
		"if_condition", "use_off_gcd_condition"
	};

	private static readonly string[] _LiteralNames = {
		null, "'actions'", "'+=/'", "'variable,'", "'name='", "'default='", "'value='", 
		"'value_else='", "'condition='", "'op='", "'if='", null, "'target_if='", 
		"'min:'", "'max:'", "'invoke_external_buff'", "'cycle_targets='", "'interrupt='", 
		"'interrupt_if='", "'use_item'", "'precombat_time='", "'use_off_gcd='", 
		"'slot='", null, null, "'|'", "'('", "')'", "','", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'&'", "'<'", "'>'", "'.'", "'='", "'!'", "'<='", "'>='", 
		"'#'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ACTIONS", "ASSIGN", "VARIABLE", "VARIABLEASSIGN", "VARDEFAULT", 
		"VARVALUE", "VARVALELSE", "VARCONDITION", "VAROP", "ACTIF", "ACTCALL", 
		"TARGETIF", "MIN", "MAX", "EXTERN", "TARGETCYCLE", "ACTINTERRUPT", "INTERRUPTIF", 
		"USEITEM", "PRECOMBATTIME", "USEOFFGCD", "SLOT", "COMMENT", "NEWLINE", 
		"BITWISE_OR", "OPEN_PARENS", "CLOSE_PARENS", "COMMA", "PLUS", "MINUS", 
		"STAR", "DIV", "PERCENT", "AMP", "LT", "GT", "DOT", "OP_EQ", "OP_NOT", 
		"OP_LE", "OP_GE", "HASH", "IDENTIFIER", "DECIMAL_NUMERAL", "NUMERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SimcParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SimcParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SimcParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SimcParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProfileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(SimcParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(SimcParser.NEWLINE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentLineContext[] commentLine() {
			return GetRuleContexts<CommentLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentLineContext commentLine(int i) {
			return GetRuleContext<CommentLineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseItemActionContext[] useItemAction() {
			return GetRuleContexts<UseItemActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseItemActionContext useItemAction(int i) {
			return GetRuleContext<UseItemActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternActionContext[] externAction() {
			return GetRuleContexts<ExternActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternActionContext externAction(int i) {
			return GetRuleContext<ExternActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallActionContext[] callAction() {
			return GetRuleContexts<CallActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallActionContext callAction(int i) {
			return GetRuleContext<CallActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableActionContext[] variableAction() {
			return GetRuleContexts<VariableActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableActionContext variableAction(int i) {
			return GetRuleContext<VariableActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleActionContext[] simpleAction() {
			return GetRuleContexts<SimpleActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleActionContext simpleAction(int i) {
			return GetRuleContext<SimpleActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalActionContext[] conditionalAction() {
			return GetRuleContexts<ConditionalActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalActionContext conditionalAction(int i) {
			return GetRuleContext<ConditionalActionContext>(i);
		}
		public ProfileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_profile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProfile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProfileContext profile() {
		ProfileContext _localctx = new ProfileContext(Context, State);
		EnterRule(_localctx, 0, RULE_profile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ACTIONS || _la==COMMENT) {
				{
				{
				State = 43;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 36;
					commentLine();
					}
					break;
				case 2:
					{
					State = 37;
					useItemAction();
					}
					break;
				case 3:
					{
					State = 38;
					externAction();
					}
					break;
				case 4:
					{
					State = 39;
					callAction();
					}
					break;
				case 5:
					{
					State = 40;
					variableAction();
					}
					break;
				case 6:
					{
					State = 41;
					simpleAction();
					}
					break;
				case 7:
					{
					State = 42;
					conditionalAction();
					}
					break;
				}
				State = 45;
				Match(NEWLINE);
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(SimcParser.COMMENT, 0); }
		public CommentLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commentLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentLineContext commentLine() {
		CommentLineContext _localctx = new CommentLineContext(Context, State);
		EnterRule(_localctx, 2, RULE_commentLine);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallActionContext : ParserRuleContext {
		public Dotted_nameContext variableName;
		public ExpContext exp_if;
		[System.Diagnostics.DebuggerNonUserCode] public ActionpartContext actionpart() {
			return GetRuleContext<ActionpartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ACTCALL() { return GetToken(SimcParser.ACTCALL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SimcParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SimcParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLEASSIGN() { return GetToken(SimcParser.VARIABLEASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_EQ() { return GetToken(SimcParser.OP_EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SimcParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Dotted_nameContext dotted_name() {
			return GetRuleContext<Dotted_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ACTIF() { return GetToken(SimcParser.ACTIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public CallActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_callAction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CallActionContext callAction() {
		CallActionContext _localctx = new CallActionContext(Context, State);
		EnterRule(_localctx, 4, RULE_callAction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			actionpart();
			State = 55;
			_la = TokenStream.LA(1);
			if ( !(_la==ASSIGN || _la==OP_EQ) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 56;
			Match(ACTCALL);
			State = 57;
			Match(COMMA);
			State = 58;
			Match(VARIABLEASSIGN);
			State = 59;
			_localctx.variableName = dotted_name(0);
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 60;
				Match(COMMA);
				State = 61;
				Match(ACTIF);
				State = 62;
				_localctx.exp_if = exp(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExternActionContext : ParserRuleContext {
		public Dotted_nameContext variableName;
		public ExpContext exp_if;
		[System.Diagnostics.DebuggerNonUserCode] public ActionpartContext actionpart() {
			return GetRuleContext<ActionpartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTERN() { return GetToken(SimcParser.EXTERN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SimcParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SimcParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLEASSIGN() { return GetToken(SimcParser.VARIABLEASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_EQ() { return GetToken(SimcParser.OP_EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SimcParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Dotted_nameContext dotted_name() {
			return GetRuleContext<Dotted_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ACTIF() { return GetToken(SimcParser.ACTIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ExternActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_externAction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExternActionContext externAction() {
		ExternActionContext _localctx = new ExternActionContext(Context, State);
		EnterRule(_localctx, 6, RULE_externAction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			actionpart();
			State = 66;
			_la = TokenStream.LA(1);
			if ( !(_la==ASSIGN || _la==OP_EQ) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 67;
			Match(EXTERN);
			State = 68;
			Match(COMMA);
			State = 69;
			Match(VARIABLEASSIGN);
			State = 70;
			_localctx.variableName = dotted_name(0);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 71;
				Match(COMMA);
				State = 72;
				Match(ACTIF);
				State = 73;
				_localctx.exp_if = exp(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UseItemActionContext : ParserRuleContext {
		public Dotted_nameContext variableName;
		public ExpContext exp_if;
		[System.Diagnostics.DebuggerNonUserCode] public ActionpartContext actionpart() {
			return GetRuleContext<ActionpartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USEITEM() { return GetToken(SimcParser.USEITEM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_EQ() { return GetToken(SimcParser.OP_EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SimcParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SimcParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SimcParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Use_off_gcd_conditionContext use_off_gcd_condition() {
			return GetRuleContext<Use_off_gcd_conditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLOT() { return GetToken(SimcParser.SLOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SimcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLEASSIGN() { return GetToken(SimcParser.VARIABLEASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ACTIF() { return GetToken(SimcParser.ACTIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Dotted_nameContext dotted_name() {
			return GetRuleContext<Dotted_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public UseItemActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_useItemAction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUseItemAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UseItemActionContext useItemAction() {
		UseItemActionContext _localctx = new UseItemActionContext(Context, State);
		EnterRule(_localctx, 8, RULE_useItemAction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			actionpart();
			State = 77;
			_la = TokenStream.LA(1);
			if ( !(_la==ASSIGN || _la==OP_EQ) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 78;
			Match(USEITEM);
			State = 81;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 79;
				Match(COMMA);
				State = 80;
				use_off_gcd_condition();
				}
				break;
			}
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 83;
				Match(COMMA);
				State = 84;
				Match(SLOT);
				State = 85;
				Match(IDENTIFIER);
				}
				break;
			}
			State = 91;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 88;
				Match(COMMA);
				State = 89;
				Match(VARIABLEASSIGN);
				State = 90;
				_localctx.variableName = dotted_name(0);
				}
				break;
			}
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 93;
				Match(COMMA);
				State = 94;
				Match(ACTIF);
				State = 95;
				_localctx.exp_if = exp(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableActionContext : ParserRuleContext {
		public Dotted_nameContext variableName;
		public IToken variableOperator;
		public ExpContext variableValue;
		public ExpContext variableElse;
		public ExpContext exp_condition;
		public ExpContext exp_if;
		[System.Diagnostics.DebuggerNonUserCode] public ActionpartContext actionpart() {
			return GetRuleContext<ActionpartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(SimcParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLEASSIGN() { return GetToken(SimcParser.VARIABLEASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_EQ() { return GetToken(SimcParser.OP_EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SimcParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Dotted_nameContext dotted_name() {
			return GetRuleContext<Dotted_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SimcParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SimcParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARDEFAULT() { return GetToken(SimcParser.VARDEFAULT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QualifierContext qualifier() {
			return GetRuleContext<QualifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAROP() { return GetToken(SimcParser.VAROP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARVALUE() { return GetToken(SimcParser.VARVALUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARVALELSE() { return GetToken(SimcParser.VARVALELSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARCONDITION() { return GetToken(SimcParser.VARCONDITION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ACTIF() { return GetToken(SimcParser.ACTIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SimcParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public VariableActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableAction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimcParserVisitor<TResult> typedVisitor = visitor as ISimcParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableActionContext variableAction() {
		VariableActionContext _localctx = new VariableActionContext(Context, State);
		EnterRule(_localctx, 10, RULE_variableAction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			actionpart();
			State = 99;
			_la = TokenStream.LA(1);
			if ( !(_la==ASSIGN || _la==OP_EQ) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 100;
			Match(VARIABLE);
			State = 101;
			Match(VARIABLEASSIGN);
			State = 102;
			_localctx.variableName = dotted_name(0);
			State = 106;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 103;
				Match(COMMA);
				State = 104;
				Match(VARDEFAULT);
				State = 105;
				qualifier();
				}
				break;
			}
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 108;
				Match(COMMA);
				State = 109;
				Match(VAROP);
				State = 110;
				_localctx.variableOperator = Match(IDENTIFIER);
				}
				break;
			}
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 113;
				Match(COMMA);
				State = 114;
				Match(VARVALUE);
				State = 115;
				_localctx.variableValue = exp(0);
				}
				break;
			}
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 118;
				Match(COMMA);
				State = 119;
				Match(VARVALELSE);
				State = 120;
				_localctx.variableElse = exp(0);
				}
				break;
			}
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 123;
				Match(COMMA);
				State = 124;
				Match(VARCONDITION);
				State = 125;
				_localctx.exp_condition = exp(0);
				}
				break;
			}
			State = 131;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 128;
				Match(COMMA);
				State = 129;
				Match(ACTIF);
				State = 130;
				_localctx.exp_if = exp(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
